# EstateOS

./: README.md
apps/: README.md
backend/: README.md  api_contract.json  orchestration.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: ai.py  auth.py  compliance.py  deals.py  documents.py  insurance.py  integrations.py  listings.py  notifications.py  payments.py  platform.py  residency.py  search.py  users.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/events/: contracts.py
backend/app/experts/: compliance_expert.py  document_expert.py  fraud_expert.py  insurance_expert.py  market_forecast_expert.py  personalization_expert.py  property_recommender.py  residency_expert.py  roi_expert.py  valuation_expert.py
backend/app/models/: entities.py  enums.py  orm.py
backend/app/repositories/: in_memory.py
backend/app/schemas/: ai.py  auth.py  compliance.py  deals.py  documents.py  insurance.py  integrations.py  listings.py  notifications.py  payments.py  platform.py  residency.py  search.py  users.py
backend/app/services/: ai_orchestrator.py  auth_service.py  base.py  compliance_service.py  deal_service.py  document_service.py  insurance_service.py  integration_service.py  ledger_service.py  listing_service.py  notification_service.py  payment_service.py  residency_service.py  search_service.py  user_service.py
backend/app/workers/: tasks.py
docs/: architecture-scorecard.md  architecture.md  authoritative-blueprint.md  autonomous-deal-execution-engine.md  blueprint-alignment.md  (+15 more)
(+91 files in other folders)
