[project]
name = "estateos-backend"
version = "0.1.0"
description = "FastAPI scaffold for the EstateOS modular monolith"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.6,<3.0",
  "uvicorn>=0.27,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "redis>=5.0,<6.0",
  "httpx>=0.27,<1.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
